--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.703.0",
+    "@aws-sdk/types": "^3.696.0",
     "aws-sdk": "^2.1692.0",
     "connect-redis": "^7.1.1",
     "dotenv": "^16.4.5",
